fixed text margin and align

--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,11 @@
-h2, h3 {
+h2 {
   text-align: center;
+  margin: 0.5rem;
+}
+
+h3 {
+  text-align: start;
+  margin: 0.5rem;
 }
 
 #pernottamento, #servizi {
@@ -76,11 +82,15 @@ h2, h3 {
   /*filter: alpha(opacity=60); /* For IE8 and earlier */
 }
 
+.transbox h2, .transbox h3 {
+  text-align: center;
+}
+
 .transbox p {
   font-weight: bold;
   font-family: 'Open Sans';
   color: #000000;
-  text-align: center;
+  text-align: start;
   padding: 1rem;
   /*opacity: 1;*/
 } 
